Tue Apr 17 21:51:40 2007  Arnold D. Robbins  <arnold@skeeve.com>

	Portability fixes for lsbcc from Nelson Beebe.

	* configure.ac: Check for stddef.h header.
	* regex.h: Use check and include header to get size_t definition.
	* main.c: Update UPDATE_YEAR, add #ifdef for HAVE_MTRACE.

Tue Apr 17 13:49:13 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* configure.ac: Add test for struct sockaddr_storage.
	* io.c: Add macro to redefine sockaddr_storage as sockaddr.

Tue Apr 17 05:45:19 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (get_a_record): Make it static, to match declaration at the
	top of the file.  (Thank you GCC for not reporting this. Grr.)

Fri Apr 13 00:29:24 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* replace.c: Only include missing/getaddrinfo.c if HAVE_SOCKETS
	is defined. Avoids problems on VMS. Thanks to Pat Rankin.

Tue Apr 10 18:53:04 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* awkgram.y, builtin.c, eval.c, ext.c, field.c, io.c,
	node.c: Added some sanity to the lint warnings, to only
	print them once if they are syntactic or of the type where
	they don't need to be repeated. Switch to `short' instead
	of `int', and in general use a variable named `warned', for
	consistency.

Sun Apr  8 16:49:28 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* awkgram.y: Add guard code to ifdef out "signed" for VMS. Thanks for
	the heads-up to Pat Rankin.
	* regcomp.c (utf8_sb_map, init_dfa): Move non-GCC code to initialize
	this array into code, to preserve word-size independance.
	* configure.ac: Add check for <arpa/inet.h>.
	* io.c: Include <arpa/inet.h> if we have it, instead of keyed off
	Tandem, needed on some Unix systems.
	* awk.h, main.c, msg.c, awkgram.y: Move to use of CAN_USE_STDARG_H
	instead of continuously repeating check for header and defined STDC
	and STDC. Thanks to Pat Rankin.

Fri Apr  6 15:28:09 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (do_length): Only print `length(array)' lint warning once.