@@ -1002,6 +1002,7 @@ check_pos:
 					cpbufs[1].buf = NULL;
 				cpbufs[1].bufsize += ((i > cpbufs[1].bufsize) ?
 						      i : cpbufs[1].bufsize);
+				assert(cpbufs[1].bufsize > 0);
 				erealloc(cpbufs[1].buf, char *,
 					 cpbufs[1].bufsize, "format_tree");
 			}
